<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tales</string>
    <string name="welcome_message">BIENVENUE DANS L\'UNIVERS DES COMPTINES, UN MONDE QUI VOUS FERA RÊVER ...</string>
    <string name="listen_story_button">Écouter une histoire dès maintenant</string>
    <string name="story_name_hint">Quel est ton prénom ?</string>
    <string name="story_elements_hint">Quels éléments veux-tu dans ton histoire ?</string>
    <string name="generate_story_button">Générer mon histoire</string>
    <string name="previous_stories">Mes histoires précédentes</string>
    <string name="loading_message">Création de ton histoire...</string>
    <string name="next_page">Page suivante</string>
    <string name="previous_page">Page précédente</string>
</resources>
