<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- En-tête violet -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_header"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/TitleTextStyle" />
    </RelativeLayout>

    <!-- Contenu principal avec fond vert -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:background="@color/green_background"
        android:padding="16dp">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            style="@style/WelcomeTextStyle"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <!-- Cercle violet clair avec illustration -->
        <RelativeLayout
            android:id="@+id/circleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeText"
            android:layout_above="@+id/listenButton"
            android:layout_marginBottom="20dp">

            <View
                android:id="@+id/purpleCircle"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_centerInParent="true"
                android:background="@color/purple_circle"
                android:elevation="2dp" />

            <!-- Ici, nous ajouterons l'image de l'enfant et des cubes dans le code Java -->

        </RelativeLayout>

        <!-- Bouton bleu -->
        <Button
            android:id="@+id/listenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listen_story_button"
            style="@style/ButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp" />

    </RelativeLayout>
</RelativeLayout>
