<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- En-tête violet -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_header"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/TitleTextStyle" />
    </RelativeLayout>

    <!-- Contenu principal avec fond vert -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:background="@color/green_background"
        android:padding="16dp">

        <!-- Image de couverture -->
        <ImageView
            android:id="@+id/storyImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:background="@color/purple_circle" />

        <!-- Contenu de l'histoire -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/storyImage"
            android:layout_above="@id/navigationButtons"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/storyContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="casual"
                android:padding="10dp"
                android:background="@color/white" />
        </ScrollView>

        <!-- Boutons de navigation -->
        <LinearLayout
            android:id="@+id/navigationButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previousButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previous_page"
                style="@style/ButtonStyle"
                android:layout_marginEnd="5dp" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next_page"
                style="@style/ButtonStyle"
                android:layout_marginStart="5dp" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
